[add] add file to ipfs

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
       <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="img/shout.png" alt="" height="24" class="d-inline-block align-text-top">
+            <img src="shout.png" alt="" height="24" class="d-inline-block align-text-top">
             shoutouts.eth
           </a>
           <span id="total-shouts" class="hidden">You've earned <strong id="balance">0</strong> SHOUTs!</span>
@@ -58,8 +58,6 @@
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <!-- IPFS -->
-    <script src="https://unpkg.com/ipfs/dist/index.min.js"></script>
     <!-- Compiled using Webpack -->
     <script src="index.js"></script>
   </body>
